fixed pictures add README.md changed filters add comments

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="light dark">
-    <title>Закрывающий тег</title>
+    <title>Closing tag</title>
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/globals.css">
@@ -19,13 +19,13 @@
   <body class="page">
     <header class="header">
       <span class="logo">&lt;/html&gt;</span>
-      <h1 class="main-title">закрывающий тег</h1>
+      <h1 class="main-title">closing tag</h1>
       <nav class="theme-menu header__theme-menu">
-        <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
+        <!-- don't change this layout because scripts won't work -->
         <ul class="theme-menu__list">
           <li class="theme-menu__item">
             <button type="button" data-theme="dark" class="theme-menu__button">
-              Темно
+              Dark
             </button>
           </li>
           <li class="theme-menu__item">
@@ -35,12 +35,12 @@
               disabled
               class="theme-menu__button"
             >
-              Авто
+            Auto
             </button>
           </li>
           <li class="theme-menu__item">
             <button type="button" data-theme="light" class="theme-menu__button">
-              Светло
+              Light
             </button>
           </li>
         </ul>
@@ -48,15 +48,15 @@
     </header>
     <main class="main-content">
       <section class="card card-content">
-        <h2 class="card-title">Фритрек и нулевой спринт: Подготовка к работе</h2>
+        <h2 class="card-title">Free track and zero sprint: preparation for work</h2>
           <div class="card-label-conteiner">
-            <img class="image first-card-filter" src="./images/1.jpg" loading="lazy" alt="снежная гора на фоне облаков">
+            <img class="image first-card-filter" src="./images/1.jpg" loading="lazy" alt="pixel art girl with sword jupms between clouds">
               <span class="card-label">&lt;start&gt;</span>
           </div>
         <div class="text-section">
           <div class="text-description">
-            <p class="card-text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
-            <p class="card-text">Я с большим нетерпением ждала старта курса. Мысль о том, что я смогу прикоснуться к миру разработки очень вдохновляла. </p>
+            <p class="card-text">This was the very beginning of the journey. At this stage, it was important to immerse myself in the basics and get into the learning mindset. And perhaps, to think about how new knowledge might impact my future.</p>
+            <p class="card-text">I was eagerly looking forward to the start of the course. The thought of stepping into the world of development was incredibly inspiring.</p>
           </div>
           <div class="card-buttons-container">
             <button type="button" class="card__icon-button">
@@ -76,15 +76,15 @@
         </div>
       </section>
       <section class="card card-content">
-        <h2 class="card-title">1 спринт: Я — чистый лист</h2>
+        <h2 class="card-title">Sprint 1: I am a blank slate</h2>
           <div class="card-label-conteiner">
-            <img class="image second-card-filter" src="./images/2.jpg" loading="lazy"  alt="тень человека который озадачен">
+            <img class="image second-card-filter" src="./images/2.jpg" loading="lazy"  alt="pixelart landscape in blue color">
               <span class="card-label">&lt;beginner&gt;</span>
           </div>
         <div class="text-section">
           <div class="text-description">
-            <p class="card-text">На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?</p>
-            <p class="card-text">На этом этапе мне было очень тяжело. Я думала, что не справлюсь и не смогу усвоить такой объем информации. А самым сложным был тот факт, что дедлайн не за горами и нужно торопиться. </p>
+            <p class="card-text">In the early stages, I dealt with fears and doubts that many beginners experience. One of them was the fear of a blank slate. Of course, it’s much more than just a fear of an empty piece of paper. Often, deeper questions hide behind this feeling: Where do I start? What if it’s too difficult? What if I fail?</p>
+            <p class="card-text">At this stage, it was really tough for me. I thought I wouldn’t be able to handle it or absorb such a large amount of information. The hardest part was the fact that the deadline was looming, and I had to hurry.</p>
           </div>
           <div class="card-buttons-container">
             <button type="button" class="card__icon-button">
@@ -104,15 +104,15 @@
         </div>
       </section>
       <section class="card card-content">
-        <h2 class="card-title">1 спринт: А если не получится?</h2>
+        <h2 class="card-title">Sprint 1: what if I fail?</h2>
           <div class="card-label-conteiner">
-            <img class="image third-card-filter" src="./images/3.jpg" loading="lazy" alt="футбольное поле с беговыми дорожками">
+            <img class="image third-card-filter" src="./images/3.jpg" loading="lazy" alt="pixelart bridge over the river">
               <span class="card-label">&lt;doubts&gt;</span>
           </div>
         <div class="text-section">
           <div class="text-description">
-            <p class="card-text">Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.</p>
-            <p class="card-text">После успешной сдачи первой проектной работы я была бесконечно рада, что преодолела неуверенность и сомнения и сформулировала для себя принцип "Важно начать и двигаться вперед, шаг за шагом. Из этих шагов и складывается опыт". </p>
+            <p class="card-text">The first project was completed! But it was still just the beginning of the journey. The joy could quickly fade, replaced by the fear of failure. Or, on the contrary, I could draw inspiration from my achievements and start believing in myself</p>
+            <p class="card-text">After successfully completing my first project, I was incredibly happy that I had overcome my doubts and uncertainties. I formulated a principle for myself: "It’s important to start and move forward, step by step. These steps build experience."</p>
           </div>
           <div class="card-buttons-container">
             <button type="button" class="card__icon-button">
@@ -132,15 +132,15 @@
         </div>
       </section>
       <section class="card card-content">
-        <h2 class="card-title">2 спринт: Погоня за идеалом</h2>
+        <h2 class="card-title">Sprint 2: chasing perfection</h2>
           <div class="card-label-conteiner">
-            <img class="image fourth-card-filter" src="./images/4.jpg" loading="lazy" alt="человек едет на мопеде">
+            <img class="image fourth-card-filter" src="./images/4.jpg" loading="lazy" alt="pixelart car near the bonfire">
               <span class="card-label">&lt;solutions&gt;</span>
           </div>
         <div class="text-section">
           <div class="text-description">
-            <p class="card-text">На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.</p>
-            <p class="card-text">Этот этап обучения дал мне возможность понять, что всегда можно сделать лучше, но важно вовремя остановиться, побороть свой перфекционизм и помнить об ограниченности времени.</p>
+            <p class="card-text">At this stage, I had already gained a solid understanding of the basics of layout, which helped me realize how much more there was ahead. I could try to chase perfection, only to understand that it was unattainable.</p>
+            <p class="card-text">This phase of learning taught me that things can always be improved, but it’s crucial to know when to stop, overcome perfectionism, and remember that time is limited.</p>
           </div>
           <div class="card-buttons-container">
             <button type="button" class="card__icon-button">
@@ -160,15 +160,15 @@
         </div>
       </section>
       <section class="card card-content">
-        <h2 class="card-title">2 спринт: О тех, кто рядом</h2>
+        <h2 class="card-title">Sprint 2: about those around me</h2>
           <div class="card-label-conteiner">
-            <img class="image fifth-card-filter" src="./images/5.jpg" loading="lazy" alt="люди на подъемном кране развешивают баннер">
+            <img class="image fifth-card-filter" src="./images/5.jpg" loading="lazy" alt="pixel art mountains with moon in blue color">
               <div class="card-label">my support</div>
           </div>
         <div class="text-section">
           <div class="text-description">
-            <p class="card-text">Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?</p>
-            <p class="card-text">Все так. Мои близкие и друзья поддерживали меня в минуты отчаяния и грусти, коих было не так уж и мало, а прогулки с любимой собакой давали возможность отвлечься от учёбы и пополнить запас сил для последующей работы над проектом. </p>
+            <p class="card-text">Throughout this journey, I was never truly alone (although at times, it felt like I was fighting against the whole world). I was surrounded by fellow students, a support team, and just loved ones I could complain to when a layout refused to cooperate. Learning something new is easier when there are like-minded people around, isn’t it?</p>
+            <p class="card-text">My family and friends supported me in moments of despair and sadness, which weren’t that rare. Walks with my beloved dog helped me take a break from studying and recharge for the next project.</p>
           </div>
           <div class="card-buttons-container">
             <button type="button" class="card__icon-button">
@@ -188,15 +188,15 @@
         </div>
       </section>
       <section class="card card-content">
-        <h2 class="card-title">3 спринт: Обходные стратегии</h2>
+        <h2 class="card-title">Sprint 3: Workarounds</h2>
           <div class="card-label-conteiner">
-            <img class="image sixth-card-filter" src="./images/6.jpg" loading="lazy" alt="колесо обозрения на фоне ночного неба">
+            <img class="image sixth-card-filter" src="./images/6.jpg" loading="lazy" alt="pixel art sky with clouds and sun in pink color">
               <span class="card-label">&lt;points of view&gt;</span>
           </div>
         <div class="text-section">
           <div class="text-description">
-            <p class="card-text">На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.</p>
-            <p class="card-text">А вот над этим пунктом я всё еще работаю, но, когда в редкие моменты я осознаю, что задачу можно реализовать разными способами - я очень радуюсь этим мыслям и хвалю себя.</p>
+            <p class="card-text">In this course, I was constantly solving different tasks. At some point, it felt like I had run out of solutions. That was the time to look at the problem from a different perspective.</p>
+            <p class="card-text">I’m still working on this point, but in those rare moments when I realize that a problem can be solved in multiple ways, I feel immense joy and give myself credit for it.</p>
           </div>
           <div class="card-buttons-container">
             <button type="button" class="card__icon-button">
@@ -216,15 +216,15 @@
         </div>
       </section>
       <section class="card card-content">
-        <h2 class="card-title">3 спринт: Когда опускаются руки</h2>
+        <h2 class="card-title">Sprint 4: when you feel like giving up</h2>
           <div class="card-label-conteiner">
-            <img class="image seventh-card-filter" src="./images/7.jpeg" loading="lazy" alt="человек плывущий на байдарке по озеру">
+            <img class="image seventh-card-filter" src="./images/3.jpg" loading="lazy" alt="white and black color pixel art bridge between two banks">
               <span class="card-label">&lt;lifes-style: none;&gt;</span>
           </div>
         <div class="text-section">
           <div class="text-description">
-            <p class="card-text">Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.</p>
-            <p class="card-text">В моменты отчаяния я вспоминаю о своей цели. Вспоминаю о том, что, проходя через сложности учёбы, - я расту. </p>
+            <p class="card-text">During my studies, I often felt overwhelmed. I had to submit projects, solve tasks, dive deeper into theory, and still remember to live life. In such moments, focus was absolutely necessary.</p>
+            <p class="card-text">In moments of despair, I remind myself of my goal. I remind myself that overcoming challenges is what makes me grow.</p>
           </div>
           <div class="card-buttons-container">
             <button type="button" class="card__icon-button">
@@ -244,15 +244,15 @@
         </div>
       </section>
       <section class="card card-content">
-        <h2 class="card-title">«Сейчас я здесь»</h2>
+        <h2 class="card-title">"Right now, I am here"</h2>
           <div class="card-label-conteiner">
-            <img class="image eith-card-filter" src="./images/8.jpg" loading="lazy" alt="две девушки достают игрушку из игрового автомата на фоне надписи Good Luck">
+            <img class="image eith-card-filter" src="./images/1.jpg" loading="lazy" alt="pixel art girl with sword jupms between clouds">
               <span class="card-label">&lt;I have a dream&gt;</span>
           </div>
         <div class="text-section">
           <div class="text-description">
-            <p class="card-text">Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.</p>
-            <p class="card-text">С каждой проектной работой я все больше убеждаюсь в правильности своего выбора. Ведь так прекрасно наблюдать за тем как из идеи я могу создать прикладные и полезные для других людей вещи. Эта мысль очень меня вдохновляет.</p>
+            <p class="card-text">Now I know a lot about layout. But this is just the beginning. First, there’s still so much to learn about making things "beautiful." Second, learning doesn’t stop when the course ends. Layout is an entire world, and this world is constantly changing. It’s impossible to fully grasp it, but this is one of those cases where the process itself is what truly matters. After all, the journey is often the result.</p>
+            <p class="card-text">With every project I complete, I become more convinced that I made the right choice. It’s amazing to see how I can turn an idea into something practical and useful for others. This meaning inspires me deeply. Most likely, no one will ever read this text. So let it be a quiet reminder to myself of how strong I am. It won’t be easy, but it will be exciting. And you’ll get through it. I promise.</p>
           </div>
           <div class="card-buttons-container">
             <button type="button" class="card__icon-button">
@@ -278,14 +278,14 @@
         <svg class="icon-floppy" viewBox="0 0 21 21">
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
-        <span class="button__text">Сохранить на память</span>
+        <span class="button__text">Save for memory</span>
       </button>
       <dialog class="dialog-window" id="dialog-id">
         <div class="dialog-header">
           <svg class="icon-floppy" viewBox="0 0 21 21">
             <use href="./svg/floppy.svg#floppy"></use>
          </svg>
-          <p>Вставьте дискету, чтобы продолжить</p>
+          <p>Insert a disk to continue</p>
         </div>
         <form class="dialog-window-form" method="dialog">
           <button class="button close-button" >
